--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,25 +1,47 @@
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-opennav w3-right" href="javascript:void(0);"
-      onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div>
-</div>
-<!-- Navbar on small screens -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-  <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-  <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-  <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" ng-click="$ctrl.closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
 </div>
 
+<nav class="navbar navbar-inverse" id="navLMS">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#" ng-click="$ctrl.openNav()">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </a>
+      <a class="navbar-brand" href="#" id="lineMenuNav" style="line-height: 0.9;">
+        <span style="font-size: 12px;">LMS</span>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="lineMenuNav" style="line-height: 1.3;">
+            <span style="font-size: 12px;">Classroom</span> <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <span type="submit" class="btn btn-success"><i class="fa fa-search" aria-hidden="true"></i></span>
+        </div>
+        <input type="text" class="form-control" placeholder="Search for Courses" style="font-size: 12px;border-radius: 0px;
+        border: 0;" />
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"> Sign Up</a></li>
+        <li><a href="#"> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <ui-view></ui-view>
